--- a/src/components/client/HeroNiko.css
+++ b/src/components/client/HeroNiko.css
@@ -30,7 +30,7 @@
   width: 100%;
   padding: 0.5rem 0;
 
-  color: #ffffff;
+ 
   /* pure white text */
   background-color: rgba(0, 0, 0, 0.5);
   margin-bottom: 2rem;
